<resources>
    <string name="app_name">Pet Shop</string>
    <string name="cachorro">Escolhe qual cachoro deseja</string>
    <string name="item1">Border Colie R$ 800,00</string>
    <string name="item2">Pit Bull R$ 750,00</string>
    <string name="item3">Pastor Alemão R$ 700,00</string>
    <string name="item4">Pastor Canadense R$ 800,00</string>
    <string name="femea">Fêmea</string>
    <string name="adestrado">Adestrado</string>
    <string name="vacina">Com todas as vacinas em dia</string>
    <string name="btn_calcular">CALCULAR</string>
</resources>
